[package]
name = "example_wallet_esplora_blocking"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_esplora = { version = "0.20", features = ["blocking"] }
anyhow = "1"
bdk_wallet = { version = "1.1.0", features = ["file_store"] }
bitcoincore-rpc = "0.19.0"
